// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiKeyPadMenuItem is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiKeyPadMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  role="menuitem"
>
  <div
    class="euiKeyPadMenuItem__inner"
  >
    <div
      class="euiKeyPadMenuItem__icon"
    >
      Icon
    </div>
    <p
      class="euiKeyPadMenuItem__label"
    >
      Label
    </p>
  </div>
</a>
`;

exports[`EuiKeyPadMenuItem renders href 1`] = `
<a
  class="euiKeyPadMenuItem"
  href="#"
  role="menuitem"
>
  <div
    class="euiKeyPadMenuItem__inner"
  >
    <div
      class="euiKeyPadMenuItem__icon"
    >
      Icon
    </div>
    <p
      class="euiKeyPadMenuItem__label"
    >
      Label
    </p>
  </div>
</a>
`;

exports[`EuiKeyPadMenuItemButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiKeyPadMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <div
    class="euiKeyPadMenuItem__inner"
  >
    <div
      class="euiKeyPadMenuItem__icon"
    >
      Icon
    </div>
    <p
      class="euiKeyPadMenuItem__label"
    >
      Label
    </p>
  </div>
</button>
`;
